<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragment.LandingPage2Fragment">

    <ImageView
        style="@style/ukuran_judul"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/gambar_landing_page_2"
        android:src="@drawable/ic_landing_page2" />

    <TextView
        style="@style/ukuran_text_landing_page"
        android:text="@string/bermain_suit_melawan" />

    <TextView
        style="@style/ukuran_text_landing_page"
        android:text="@string/komputer" />

</LinearLayout>