<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".fragment.LandingPage3Fragment">

    <EditText
        android:id="@+id/etNama"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:hint="@string/masukkan_nama_anda"
        app:layout_constraintTop_toBottomOf="@id/tvPemberitahu" />

    <ImageView
        android:id="@+id/ivMuka"
        style="@style/ukuran_judul"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/gambar_landing_page_3"
        android:src="@drawable/ic_landing_page3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivNext"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_next"
        android:contentDescription="@string/gambar_landing_page_3"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvPemberitahu"
        style="@style/ukuran_text_landing_page"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/tuliskan_namamu_di_bawah"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivMuka" />
</androidx.constraintlayout.widget.ConstraintLayout>